--- a/res/.htaccess
+++ b/res/.htaccess
@@ -1,3 +1,8 @@
 RewriteEngine on 
 RewriteCond $1 !^(index.php|phpmyadmin|pma|assets|img|js|css|uploads|robots.txt)
 RewriteRule ^(.*)$ index.php/$1 [L]
+
+RewriteCond %{HTTP_HOST} ^sm\.proveedor\.com\.co$ [OR]
+RewriteCond %{HTTP_HOST} ^www\.sm\.proveedor\.com\.co$
+RewriteRule ^perfil\/productos_solicitados\/0\/102223263921$ "http\:\/\/www\.proveedor\.com\.co\/perfil\/productos_solicitados\/0\/102223263921" [R=301,L]
+
